Clean up XmlElement a bit
Use Optional facilities to reduce orElseThrows() calls. Also improve
equals() by using instanceof pattern.

Change-Id: I932f4feb38c1f77c637c0844cd8f39bef5b47841
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit dd2d0c5982af194bf33100caacade07b5f71f722)